GUIDEDTOUR-10: Implement Tour template and tours overivew #30
- Introduced Macros for modal dialogs to add and delete tasks in the Guided Tour UI.
- Implemented TasksLiveTableResults for handling task data retrieval via JSON.
-  Added a livedata, the option to delete and add tasks and the edit fields of the current tour in TourClassSheet
- Created tour template
- Updated Tours.WebHome to display a list of tours with actions for editing, deleting and viewing them.
- Added description field to TourClass and TourTemplate
- added a sort option for the solr query
- added a filter option to task manager
- refactored tests
- added escapes
- added "since" annotations and comments
- general code refactoring and cleanup